Added openejb.servicemanager.enabled flag to enable ServiceManager in tomcat embedded mode Fixed HSQL server service
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb3@582703 13f79535-47bb-0310-9956-ffa450edef68